# community-apps

./: .cursorignore  .gitignore  Dockerfile  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.example  secrets.onepassword  secrets.toml
data/: feedback-sample.csv  instructions.md  transcriptions.csv
src/community_apps/: home.py  streamlit_app.py
src/community_apps/apps/: analyze_student_work.py  assessment_feedback.py  generate_feedback_demo.py  transcribe_images.py
src/streamlit-app/: __init__.py
