[project]
name = "community_apps"
version = "0.1.0"
description = "Community apps for Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.44.1",
    "authlib>=1.5.2",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "rich>=14.0.0",
    "watchdog>=6.0.0",
]
